--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "webpack --config webpack.prod-node.config.js && webpack --config webpack.prod-web.config.js && iojs production.js"
+    "build": "webpack --progress --colours --config webpack.prod-node.config.js && webpack --progress --colours --config webpack.prod-web.config.js",
+    "prod": "iojs production.js"
   },
   "repository": {
     "type": "git",
@@ -27,15 +28,18 @@
   "dependencies": {
     "6to5": "^3.5.3",
     "alt": "^0.13.0",
+    "co": "^4.3.1",
     "jsx-loader": "^0.12.2",
     "koa": "^0.17.0",
     "koa-better-body": "^1.0.17",
+    "koa-mount": "^1.3.0",
     "koa-render": "^0.2.1",
     "koa-router": "^4.0.1",
     "koa-static": "^1.4.9",
     "less": "^2.4.0",
     "less-loader": "^2.0.0",
     "react": "^0.12.2",
+    "react-router": "^0.12.0",
     "underscore": "^1.7.0",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
