--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress --colours --config webpack.prod-node.config.js && webpack --progress --colours --config webpack.prod-web.config.js",
-    "prod": "iojs production.js"
+    "prod-server": "iojs production.js",
+    "dev-server": "./dev-server.sh" 
   },
   "repository": {
     "type": "git",
