--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "6to5": "^3.5.3",
     "alt": "^0.13.0",
     "co": "^4.3.1",
+    "css-loader": "^0.9.1",
+    "extract-text-webpack-plugin": "^0.3.8",
     "jsx-loader": "^0.12.2",
     "koa": "^0.17.0",
     "koa-better-body": "^1.0.17",
@@ -39,8 +41,10 @@
     "koa-static": "^1.4.9",
     "less": "^2.4.0",
     "less-loader": "^2.0.0",
+    "null-loader": "^0.1.0",
     "react": "^0.12.2",
     "react-router": "^0.12.0",
+    "style-loader": "^0.8.3",
     "underscore": "^1.7.0",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
