--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "co": "^4.3.1",
     "css-loader": "^0.9.1",
     "extract-text-webpack-plugin": "^0.3.8",
+    "file-loader": "^0.8.1",
     "jsx-loader": "^0.12.2",
     "koa": "^0.17.0",
     "koa-better-body": "^1.0.17",
@@ -46,6 +47,7 @@
     "react-router": "^0.12.0",
     "style-loader": "^0.8.3",
     "underscore": "^1.7.0",
+    "url-loader": "^0.5.5",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
   },
