--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/webpack/react-starter",
   "dependencies": {
     "6to5": "^3.5.3",
-    "alt": "^0.13.0",
+    "alt": "^0.13.1",
     "co": "^4.3.1",
     "css-loader": "^0.9.1",
     "extract-text-webpack-plugin": "^0.3.8",
@@ -46,6 +46,7 @@
     "react": "^0.12.2",
     "react-router": "^0.12.0",
     "style-loader": "^0.8.3",
+    "swarm": "^0.3.25",
     "underscore": "^1.7.0",
     "url-loader": "^0.5.5",
     "webpack": "^1.5.3",
