--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "react-router": "^0.12.0",
     "style-loader": "^0.8.3",
     "swarm": "^0.3.25",
+    "swarm-restapi": "^0.3.24",
     "underscore": "^1.7.0",
     "url-loader": "^0.5.5",
     "webpack": "^1.5.3",
-    "webpack-dev-server": "^1.7.0"
+    "webpack-dev-server": "^1.7.0",
+    "ws": "^0.7.1"
   },
   "devDependencies": {
     "react-hot-loader": "^1.1.4"
