--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "jsx-loader": "^0.12.2",
     "koa": "^0.17.0",
     "koa-better-body": "^1.0.17",
+    "koa-connect": "^1.0.0",
     "koa-mount": "^1.3.0",
     "koa-render": "^0.2.1",
     "koa-router": "^4.0.1",
     "koa-static": "^1.4.9",
+    "koa-ws": "^1.0.1",
     "less": "^2.4.0",
     "less-loader": "^2.0.0",
     "null-loader": "^0.1.0",
