--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "koa-static": "^1.4.9",
     "less": "^2.4.0",
     "less-loader": "^2.0.0",
+    "lodash": "^3.2.0",
     "null-loader": "^0.1.0",
+    "pouchdb": "^3.3.1",
     "react": "^0.12.2",
     "react-router": "^0.12.0",
     "style-loader": "^0.8.3",
