--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "homepage": "https://github.com/webpack/react-starter",
   "dependencies": {
-    "6to5": "^3.5.3",
     "alt": "^0.13.1",
+    "babel": "^4.3.0",
     "co": "^4.3.1",
     "css-loader": "^0.9.1",
     "extract-text-webpack-plugin": "^0.3.8",
