--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install && webpack --progress --colours --config webpack.prod-node.config.js && webpack --progress --colours --config webpack.prod-web.config.js",
+    "build": "npm install && webpack --progress --colours --config webpack.prod-node.config.js && webpack --progress --colours --config webpack.prod-web.config.js && npm run build-favicon",
     "prod-server": "ENVIRONMENT='prod' iojs index.js",
-    "dev-server": "./bin/dev-server.sh"
+    "dev-server": "./bin/dev-server.sh && npm run build-favicon",
+    "build-favicon": "cp ./src/app/favicon.ico build/"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "jsx-loader": "^0.12.2",
     "koa": "^0.17.0",
     "koa-better-body": "^1.0.17",
+    "koa-favicon": "^1.2.0",
     "koa-mount": "^1.3.0",
     "koa-render": "^0.2.1",
     "koa-router": "^4.0.1",
