--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install && webpack --progress --colours --config webpack.prod-node.config.js && webpack --progress --colours --config webpack.prod-web.config.js && npm run build-favicon",
-    "prod-server": "ENVIRONMENT='prod' iojs index.js",
+    "prod-server": "ENVIRONMENT='prod' iojs --harmony index.js",
     "dev-server": "./bin/dev-server.sh && npm run build-favicon",
     "build-favicon": "cp ./src/app/favicon.ico build/"
   },
