--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "webpack-dev-server": "^1.7.0"
   },
   "devDependencies": {
+    "nodemon": "^1.3.7",
     "react-hot-loader": "^1.1.4"
   }
 }
