--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
   "dependencies": {
     "alt": "^0.13.1",
     "babel": "^4.3.0",
+    "babel-core": "^4.4.5",
+    "babel-loader": "^4.0.0",
     "co": "^4.3.1",
     "css-loader": "^0.9.1",
     "extract-text-webpack-plugin": "^0.3.8",
     "file-loader": "^0.8.1",
-    "jsx-loader": "^0.12.2",
     "koa": "^0.17.0",
     "koa-better-body": "^1.0.17",
     "koa-favicon": "^1.2.0",
