--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
     "less-loader": "^2.0.0",
     "leveldown": "^0.10.4",
     "lodash": "^3.3.1",
+    "material-ui": "^0.7.0",
     "null-loader": "^0.1.0",
     "pouchdb": "^3.3.1",
     "react": "^0.12.2",
     "react-resolver": "0.0.2",
     "react-router": "^0.12.0",
+    "react-tap-event-plugin": "^0.1.4",
     "style-loader": "^0.8.3",
     "underscore": "^1.7.0",
     "url-loader": "^0.5.5",
