Add PostCSS \w autoprefixer to build

--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
   "homepage": "https://github.com/webpack/react-starter",
   "dependencies": {
     "alt": "^0.13.10",
+    "autoprefixer-core": "^5.1.7",
     "babel": "^4.3.0",
     "babel-core": "^4.4.5",
     "babel-loader": "^4.0.0",
     "bluebird": "^1.2.4",
     "co": "^4.3.1",
     "css-loader": "^0.9.1",
+    "csswring": "^3.0.1",
     "eventemitter3": "^0.1.6",
     "extract-text-webpack-plugin": "^0.3.8",
     "file-loader": "^0.8.1",
@@ -52,6 +54,7 @@
     "lodash": "^3.3.1",
     "material-ui": "^0.7.0",
     "null-loader": "^0.1.0",
+    "postcss-loader": "^0.3.0",
     "pouchdb": "^3.3.1",
     "react": "^0.12.2",
     "react-resolver": "0.0.2",
